chore: search films
